--- a/src/i18n/locales/en/landing.json
+++ b/src/i18n/locales/en/landing.json
@@ -251,6 +251,11 @@
     "terms": "Terms of Service",
     "allRightsReserved": "All rights reserved"
   },
+  "templates": {
+    "badge": "Templates",
+    "title": "Get inspired by real-world examples",
+    "description": "Our templates are based on actual plans from companies and organizations. Regardless of industry - education, HR, marketing or finance - there's a template that matches your needs. Use them as inspiration for your year wheel."
+  },
   "cta": {
     "title": "Ready to start?",
     "subtitle": "Create your first year wheel today",
