--- a/src/i18n/locales/sv/landing.json
+++ b/src/i18n/locales/sv/landing.json
@@ -251,6 +251,11 @@
     "terms": "Användarvillkor",
     "allRightsReserved": "Alla rättigheter förbehållna"
   },
+  "templates": {
+    "badge": "Mallar",
+    "title": "Inspireras av verkliga exempel",
+    "description": "Våra mallar bygger på riktiga planeringar från företag och föreningar. Oavsett bransch - undervisning, HR, marknadsföring eller finans - finns en mall som matchar dina behov. Använd dem som inspiration för ditt årshjul."
+  },
   "cta": {
     "title": "Redo att börja?",
     "subtitle": "Skapa ditt första årshjul idag",
