--- a/src/i18n/locales/en/common.json
+++ b/src/i18n/locales/en/common.json
@@ -59,6 +59,7 @@
     "noOtherTeams": "No other teams available"
   },
   "navigation": {
+    "menu": "Menu",
     "dashboard": "Dashboard",
     "wheels": "Wheels",
     "teams": "Teams",
