--- a/src/i18n/locales/sv/common.json
+++ b/src/i18n/locales/sv/common.json
@@ -59,6 +59,7 @@
     "noOtherTeams": "Inga andra team tillgängliga"
   },
   "navigation": {
+    "menu": "Meny",
     "dashboard": "Översikt",
     "wheels": "Hjul",
     "teams": "Team",
