--- a/src/i18n/locales/sv/landing.json
+++ b/src/i18n/locales/sv/landing.json
@@ -1,7 +1,9 @@
 {
   "nav": {
     "features": "Funktioner",
+    "templates": "Mallar",
     "pricing": "Priser",
+    "comparison": "Jämförelse",
     "login": "Logga in",
     "getStarted": "Kom igång gratis"
   },
