another fix for translations on /admin

--- a/src/i18n/locales/en/admin.json
+++ b/src/i18n/locales/en/admin.json
@@ -33,5 +33,7 @@
   "lastSeen": "Last Seen",
   "free": "Free",
   "recentUsers": "Recent Users",
-  "recentWheels": "Recent Wheels"
+  "recentWheels": "Recent Wheels",
+  "by": "by",
+  "unknown": "Unknown"
 }
