--- a/src/i18n/locales/sv/admin.json
+++ b/src/i18n/locales/sv/admin.json
@@ -33,5 +33,7 @@
   "lastSeen": "Senast Sedd",
   "free": "Gratis",
   "recentUsers": "Senaste Användare",
-  "recentWheels": "Senaste Hjul"
+  "recentWheels": "Senaste Hjul",
+  "by": "av",
+  "unknown": "Okänd"
 }
