adds description to activity updates activity modal

--- a/src/i18n/locales/en/editor.json
+++ b/src/i18n/locales/en/editor.json
@@ -107,6 +107,8 @@
     "start": "Start",
     "end": "End",
     "time": "Time",
+    "description": "Description",
+    "dragToMove": "Drag to move",
     "edit": "Edit",
     "delete": "Delete",
     "deleteConfirm": "Delete \"{name}\"?"
@@ -127,6 +129,8 @@
     "endDateInvalid": "End date must be after start date",
     "timeLabel": "Time (optional)",
     "timePlaceholder": "e.g., 09:00 - 17:00",
+    "descriptionLabel": "Description (optional)",
+    "descriptionPlaceholder": "Add additional details about this activity...",
     "deleteButton": "Delete",
     "cancelButton": "Cancel",
     "saveButton": "Save",
@@ -277,7 +281,9 @@
     "itemNamePlaceholder": "e.g., Christmas campaign",
     "startDate": "Start Date",
     "endDate": "End Date",
-    "time": "Time (optional)",
+    "time": "Time",
+    "description": "Description",
+    "descriptionPlaceholder": "Add additional details about this activity...",
     "cancel": "Cancel",
     "save": "Save",
     "addButton": "Add activity",
