--- a/src/i18n/locales/sv/editor.json
+++ b/src/i18n/locales/sv/editor.json
@@ -107,6 +107,8 @@
     "start": "Start",
     "end": "Slut",
     "time": "Tid",
+    "description": "Beskrivning",
+    "dragToMove": "Dra för att flytta",
     "edit": "Redigera",
     "delete": "Radera",
     "deleteConfirm": "Radera \"{name}\"?"
@@ -127,6 +129,8 @@
     "endDateInvalid": "Slutdatum måste vara efter startdatum",
     "timeLabel": "Tid (valfritt)",
     "timePlaceholder": "t.ex., 09:00 - 17:00",
+    "descriptionLabel": "Beskrivning (frivilligt)",
+    "descriptionPlaceholder": "Lägg till ytterligare information om denna aktivitet...",
     "deleteButton": "Radera",
     "cancelButton": "Avbryt",
     "saveButton": "Spara",
@@ -277,7 +281,9 @@
     "itemNamePlaceholder": "t.ex. Julkampanj",
     "startDate": "Startdatum",
     "endDate": "Slutdatum",
-    "time": "Tid (frivilligt)",
+    "time": "Tid",
+    "description": "Beskrivning",
+    "descriptionPlaceholder": "Lägg till ytterligare information om denna aktivitet...",
     "cancel": "Avbryt",
     "save": "Spara",
     "addButton": "Lägg till aktivitet",
