fixes ui issues updates ai assitant

--- a/src/i18n/locales/en/auth.json
+++ b/src/i18n/locales/en/auth.json
@@ -2,6 +2,7 @@
   "signIn": "Sign in",
   "signUp": "Sign up",
   "signOut": "Sign out",
+  "goodbyeMessage": "Goodbye! See you soon!",
   "email": "Email",
   "password": "Password",
   "forgotPassword": "Forgot password?",
