--- a/src/i18n/locales/en/subscription.json
+++ b/src/i18n/locales/en/subscription.json
@@ -14,7 +14,7 @@
       "notAvailable": "Not available",
       "features": {
         "wheels": "3 year wheels",
-        "teams": "1 team with 3 members",
+        "teams": "1 team with up to 3 members",
         "export": "Export as PNG and SVG",
         "basic": "Basic features"
       }
