--- a/src/i18n/locales/sv/auth.json
+++ b/src/i18n/locales/sv/auth.json
@@ -2,6 +2,7 @@
   "signIn": "Logga in",
   "signUp": "Registrera",
   "signOut": "Logga ut",
+  "goodbyeMessage": "Hej då! Vi ses snart!",
   "email": "E-post",
   "password": "Lösenord",
   "forgotPassword": "Glömt lösenord?",
