--- a/src/i18n/locales/sv/subscription.json
+++ b/src/i18n/locales/sv/subscription.json
@@ -14,7 +14,7 @@
       "notAvailable": "Inte tillgänglig",
       "features": {
         "wheels": "3 årshjul",
-        "teams": "1 team med 3 medlemmar",
+        "teams": "1 team med upp till 3 medlemmar",
         "export": "Export som PNG och SVG",
         "basic": "Grundläggande funktioner"
       }
