closes ai assitand for non premium users

--- a/src/i18n/locales/en/subscription.json
+++ b/src/i18n/locales/en/subscription.json
@@ -86,6 +86,7 @@
   },
   "upgradePrompt": {
     "defaultTitle": "Upgrade to Premium",
+    "aiAssistant": "AI Assistant is a Premium feature. Upgrade to unlock AI-powered planning and design assistance!",
     "currentUsage": "Current usage",
     "benefitsTitle": "With Premium you get:",
     "benefit1": "AI-assisted design and planning",
