--- a/src/i18n/locales/sv/subscription.json
+++ b/src/i18n/locales/sv/subscription.json
@@ -86,6 +86,7 @@
   },
   "upgradePrompt": {
     "defaultTitle": "Uppgradera till Premium",
+    "aiAssistant": "AI-assistenten är en Premium-funktion. Uppgradera för att låsa upp AI-driven planering och designhjälp!",
     "currentUsage": "Nuvarande användning",
     "benefitsTitle": "Med Premium får du:",
     "benefit1": "AI-assisterad design och planering",
