restructures landing page

--- a/src/i18n/locales/sv/auth.json
+++ b/src/i18n/locales/sv/auth.json
@@ -13,8 +13,8 @@
   "sendResetLink": "Skicka återställningslänk",
   "backToSignIn": "Tillbaka till inloggning",
   "login": {
-    "title": "Välkommen tillbaka",
-    "welcomeBack": "Välkommen tillbaka",
+    "title": "Logga in",
+    "welcomeBack": "Logga in",
     "subtitle": "Logga in för att fortsätta med dina hjul",
     "button": "Logga in",
     "loading": "Loggar in...",
@@ -46,7 +46,7 @@
     "signupTitle": "Skapa ditt konto",
     "loginTitle": "Logga in",
     "signupSubtitle": "Kom igång direkt – ingen kreditkort behövs",
-    "loginSubtitle": "Välkommen tillbaka!",
+    "loginSubtitle": "Logga in på ditt konto",
     "freeBenefitsTitle": "Ingår i den kostnadsfria versionen:",
     "benefit1": "3 årshjul",
     "benefit2": "1 team med upp till 3 medlemmar",
