adds template selection to editor fixes navigation error on landing page

--- a/src/i18n/locales/en/auth.json
+++ b/src/i18n/locales/en/auth.json
@@ -13,8 +13,8 @@
   "sendResetLink": "Send reset link",
   "backToSignIn": "Back to sign in",
   "login": {
-    "title": "Welcome back",
-    "welcomeBack": "Welcome back",
+    "title": "Sign in",
+    "welcomeBack": "Sign in",
     "subtitle": "Sign in to continue with your wheels",
     "button": "Sign in",
     "loading": "Signing in...",
@@ -46,7 +46,7 @@
     "signupTitle": "Create your account",
     "loginTitle": "Sign in",
     "signupSubtitle": "Get started instantly – no credit card needed",
-    "loginSubtitle": "Welcome back!",
+    "loginSubtitle": "Sign in to your account",
     "freeBenefitsTitle": "Included in the free version:",
     "benefit1": "3 year wheels",
     "benefit2": "1 team with up to 3 members",
