--- a/src/i18n/locales/sv/common.json
+++ b/src/i18n/locales/sv/common.json
@@ -105,6 +105,7 @@
     "fileOperations": "Filoperationer",
     "importFile": "Importera (.yrw)",
     "exportFile": "Exportera (.yrw)",
+    "exportData": "Exportera data (Excel/Sheets)",
     "resetAll": "Återställ allt",
     "selectImageFormat": "Välj bildformat",
     "pngTransparent": "PNG (Transparent)",
